[package]
name = "rnpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
error-chain = "0.12.4"
flate2 = "1.0.28"
fs_extra = "1.3.0"
reqwest = { version = "0.12.2", features = ["json", "default-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tar = "0.4.40"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "fs"] }
walkdir = "2.5.0"
